# amp-chain-simulation

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROJECT_MAP.md  README.md  build.rs  bundler.toml  init_plugin.py  pyproject.toml
.github/workflows/: ci.yml
.polly/: diff-pr5.txt  diff-pr6-v2.txt  diff-pr6.txt  diff-pr7-v2.txt  diff-pr7.txt  diff-pr8-v2.txt  diff-pr8.txt  registry.json
.specs/: planning-research-report.md
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/eq-neural-fix/: SPEC.md  tasks.md
.specs/features/component-lab/: design.md  spec.md  tasks.md
.specs/features/cross-platform/: design.md  progress.md  spec.md  tasks.md
.specs/features/mlc-zero-v-amp/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
benches/: check_regressions.py  dsp_pipeline.rs  faust_eq.rs  neural_drive.rs  resampler.rs
build-support/: Cargo.toml
build-support/src/: lib.rs
docs/: ARCHITECTURE_OVERVIEW.md  BUILD.md  CROSS_PLATFORM_ROADMAP.md  PLAN-bypass-system.md  PLAN-cabinet-simulator.md  PLAN-core-architecture.md  PLAN-ir-loader.md  PLAN-libtorch-integration.md  PLAN-signal-chain-ui.md  REF-clipping-curves.md  REPORT-ASIO-LATENCY-WINDOWS-STANDALONE.md  ROADMAP-mlc-zero-v.md  UAT.md  VERIFICATION.md  WINDOWS.md  dsp-advanced-techniques-report.md  spec-cabinet-ir.md
docs/plans/: limiter-mlc-zero-v.md
docs/sessions/: 2026-07-07.md
dsp/: FaustModule.hpp  MlcZeroVModule.hpp  main.dsp  mlc_zero_v.dsp  mlc_zero_v_wrapper.cpp  mlc_zero_v_wrapper.h  wrapper.cpp  wrapper.h
faust-ddsp/: filters.lib  svf.lib
neural/: main.mojo
neural/drive/: wavenet_drive.onnx  wavenet_drive.onnx.data
scripts/: check_env.sh  run_standalone.sh
src/: lib.rs
src/bridge/: faust.rs  mlc_zero_v.rs  mod.rs  mojo.rs  neural_rust.rs  oversampling.rs  wavenet.rs
src/core/: audio_config.rs  audio_status.rs  device_context.rs  device_identity.rs  dsp.rs  mod.rs  ui.rs
src/core/cabinet/: engine.rs  library.rs  mod.rs  runtime.rs  types.rs
src/core/dsp/: analyzer.rs  limiter.rs  mod.rs  rt_resampler.rs  sample_convert.rs  standalone_pipeline.rs
src/core/dsp/cabinet/: ambience.rs  filters.rs  ir_convolver.rs  mod.rs
src/core/dsp/neural_amp/: mod.rs  neural_dsp.rs
src/core/dsp/preamp/: mod.rs
src/core/state/: mod.rs  plugin_params.rs
src/core/ui/: cabinet_panel.rs  lab_panel.rs  main_view.rs  mlc_zero_v_panel.rs  mod.rs  signal_chain.rs  spectrum.rs
src/lab/: component.rs  database.rs  export.rs  mod.rs  node.rs  pipeline.rs  registry.rs  snapshot.rs  variant_runtime.rs  verification.rs
src/models/: modelo_amp.onnx  modelo_amp_lstm_2026_03_10_18_09_28.onnx.data
tests/: abi.rs  bundle_deps.rs  format_equivalence.rs  lab_integration.rs  mlc_diagnosis.rs  neural_equivalence.rs  pipeline_golden.rs  rt_safety.rs
xtask/: Cargo.toml
xtask/src/: main.rs
