[package]
name = "distortion"
version = "0.1.0"
edition = "2021"
authors = ["jao <joaovittorh1@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
arc-swap = "1.7.1"
biquad = "0.5.0"
cpal = "0.15.2"
eframe = "0.31.0"
fast-math = "0.1.1"
hound = "3.5.1"
nalgebra = "0.34.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
num-complex = "0.4.6"
realfft = "3.5.0"
rfd = "0.14.1"
ringbuf = "0.4.8"
rtrb = "0.3.3"
rubato = "1.0.1"
tract-onnx = "0.22.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
