[package]
name = "distortion"
version = "0.1.0"
edition = "2021"
authors = ["jao <joaovittorh1@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A short description of your plugin"

[workspace]
members = ["xtask", "build-support"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
arc-swap = "1.7.1"
cpal = "0.15.2"
eframe = "0.31.0"
hound = "3.5.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
num-complex = "0.4.6"
realfft = "3.5.0"
rfd = "0.14.1"
rtrb = "0.3.3"
rubato = "1.0.1"
audioadapter-buffers = "=2.0.0"
egui_knob = "0.2.0"
fft-convolver = "0.3.0"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = { version = "0.10", optional = true }
semver = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = ["lab", "nih-plug-assert"]
lab = ["dep:sha2", "dep:semver", "dep:chrono", "dep:uuid", "dep:flate2", "dep:tar"]
nih-plug-assert = ["nih_plug/assert_process_allocs"]
rt-safety-test = []

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[build-dependencies]
build-support = { path = "build-support" }
cc = "1.0"
bindgen = "0.71.1"
